User interface preparations

--- a/QuMixDroid_Qu16/res/values/strings.xml
+++ b/QuMixDroid_Qu16/res/values/strings.xml
@@ -1,5 +1,41 @@
 <resources>
 
     <string name="app_name">QuMixDroid_Qu16</string>
+	<string name="mono_01">1</string>
+	<string name="mono_02">2</string>
+	<string name="mono_03">3</string>
+	<string name="mono_04">4</string>
+	<string name="mono_05">5</string>
+	<string name="mono_06">6</string>
+	<string name="mono_07">7</string>
+	<string name="mono_08">8</string>
+	<string name="mono_09">9</string>
+	<string name="mono_10">10</string>
+	<string name="mono_11">11</string>
+	<string name="mono_12">12</string>
+	<string name="mono_13">13</string>
+	<string name="mono_14">14</string>
+	<string name="mono_15">15</string>
+	<string name="mono_16">16</string>
+	
+	<string name="stereo_1">St 1</string>
+	<string name="stereo_2">St 2</string>
+	<string name="stereo_3">St 3</string>
+	<string name="fx_ret_1">FxR 1</string>
+	<string name="fx_ret_2">FxR 2</string>
+	<string name="fx_ret_3">FxR 3</string>
+	<string name="fx_ret_4">FxR 4</string>
+	<string name="fx_send_1">FxS 1</string>
+	<string name="fx_send_2">FxS 2</string>
 
+	<string name="mix_1">Mix 1</string> 
+	<string name="mix_2">Mix 2</string> 
+	<string name="mix_3">Mix 3</string> 
+	<string name="mix_4">Mix 4</string> 
+	<string name="mix_5_6">Mix 5-6</string> 
+	<string name="mix_7_8">Mix 7-8</string> 
+	<string name="mix_9_10">Mix 9-10</string>
+	
+	<string name="lr">L/R</string>
+					
 </resources>
