--- a/QuMixDroid/res/values/strings.xml
+++ b/QuMixDroid/res/values/strings.xml
@@ -11,9 +11,23 @@
     <string name="demo_mode">Start demo mode</string>
     <string name="mute">Mute</string>
     <string name="assign">On</string>
-    
     <string name="layer_1">Layer 1</string>
     <string name="layer_2">Layer 2</string>
     <string name="PAFL">PAFL</string>
+    <string name="pre">Pre</string>
+    <string name="pafl">PAFL</string>
+
+    <string-array name="mixes">
+        <item>LR</item>
+        <item>FX 1</item>
+        <item>FX 2</item>
+        <item>Mix 1</item>
+        <item>Mix 2</item>
+        <item>Mix 3</item>
+        <item>Mix 4</item>
+        <item>Mix 5-6</item>
+        <item>Mix 7-8</item>
+        <item>Mix 9-10</item>
+    </string-array>
 
 </resources>
