--- a/QuMixDroid/res/values/strings.xml
+++ b/QuMixDroid/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_login">QuMixDroid</string>
     <string name="connect_to_qu_16">Connect to Qu16 mixer</string>
+    <string name="connect">Connect</string>
     <string name="connect_ip_address">IP address</string>
     <string name="try_demo_mode">Don\'t connect, try the app in demo mode.</string>
     <string name="demo_mode">Start demo mode</string>
@@ -26,7 +27,11 @@
     <string name="PAFL">PAFL</string>
     <string name="pre">Pre</string>
     <string name="pafl">PAFL</string>
-
+    <string name="copyright">Copyright &#169; 2013 George Wieggers.
+ All rights reserved. This program and the accompanying materials
+ are made available under the terms of the GNU Public License v3.0
+ which accompanies this distribution, and is available at
+ http://www.gnu.org/licenses/gpl.html</string>
     <string-array name="mixes">
         <item>LR</item>
         <item>FX 1</item>
