Several UI modifications

--- a/QuMixDroid/res/values/strings.xml
+++ b/QuMixDroid/res/values/strings.xml
@@ -17,9 +17,9 @@
     <string name="title_activity_login">QuMixDroid</string>
     <string name="connect_to_qu_16">Connect to Qu16 mixer</string>
     <string name="connect">Connect</string>
-    <string name="connect_ip_address">IP address</string>
-    <string name="try_demo_mode">Don\'t connect, try the app in demo mode.</string>
-    <string name="demo_mode">Start demo mode</string>
+    <string name="connect_ip_address">IP:</string>
+    <string name="try_demo_mode">Try the app in offline mode.</string>
+    <string name="demo_mode">Offline</string>
     <string name="mute">Mute</string>
     <string name="assign">On</string>
     <string name="layer_1">Layer 1</string>
