Start using fragments. Display a "connecting" screen (even when in offline mode)

--- a/QuMixDroid/res/values/strings.xml
+++ b/QuMixDroid/res/values/strings.xml
@@ -83,4 +83,6 @@
 	<string name="mix_9_10">Mx9-10</string>
 	
 	<string name="lr">Main L/R</string>
+	
+	<string name="connecting_please_wait">Connecting, please wait</string>
 </resources>
