--- a/QuMixDroid/res/values/strings.xml
+++ b/QuMixDroid/res/values/strings.xml
@@ -63,7 +63,15 @@
 	<string name="mono_14">14</string>
 	<string name="mono_15">15</string>
 	<string name="mono_16">16</string>
-	
+	<string name="mono_17">17</string>
+	<string name="mono_18">18</string>
+	<string name="mono_19">19</string>
+	<string name="mono_20">20</string>
+	<string name="mono_21">21</string>
+	<string name="mono_22">22</string>
+	<string name="mono_23">23</string>
+	<string name="mono_24">24</string>
+			
 	<string name="stereo_1">St 1</string>
 	<string name="stereo_2">St 2</string>
 	<string name="stereo_3">St 3</string>
@@ -81,7 +89,12 @@
 	<string name="mix_5_6">Mx5-6</string> 
 	<string name="mix_7_8">Mx7-8</string> 
 	<string name="mix_9_10">Mx9-10</string>
-	
+
+	<string name="group_1_2">Gr1-2</string> 
+	<string name="group_3_4">Gr3-4</string> 
+	<string name="matrix_1_2">Mt1-2</string>
+	<string name="matrix_3_4">Mt3-4</string>
+			
 	<string name="lr">Main L/R</string>
 	
 	<string name="connecting_please_wait">Connecting, please wait</string>
